# soft-landing

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REFACTORING_PLAN.md  VERSION  cliff.toml  demo.md  docker-compose.prod.yml  gradle.properties  participants.md  research-deep-dive.md  research-disruption-ops.md  tech-stack.md
.beads/: PRIME.md  config.yaml  issues.jsonl  metadata.json
androidApp/: build.gradle.kts
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py  models.py  store.py  ws.py
backend/app/adapters/: __init__.py  gemini_grounding.py  lufthansa_api.py  repositories.py  static_data.py  websocket_notification.py
backend/app/db/: __init__.py  engine.py  tables.py
backend/app/ports/: __init__.py  flight_data.py  grounding.py  notification.py  repositories.py
backend/app/seeds/: __init__.py  __main__.py  passengers.py  scenario_delay.py  scenario_diversion.py  scenario_snowstorm.py
backend/app/services/: __init__.py  ahead_of_flight.py  disruption_engine.py  gemini.py  lufthansa.py  option_generator.py  state_manager.py
backend/plans/: pw0-disruption-engine.md
backend/scripts/: inspect_data.py
backend/tests/: conftest.py  test_ahead_of_flight.py  test_disruption_engine.py  test_gemini_adapter.py  test_lufthansa_adapter.py  test_option_generator.py  test_repositories.py  test_state_manager.py  test_static_adapter.py  test_websocket_adapter.py
dashboard/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
deck/: slides.md  (+1 more)
(+110 files in other folders)
