[project]
name = "soft-landing-backend"
version = "0.1.0"
description = "ReRoute backend — airline passenger disruption management"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.134.0",
    "google-genai>=1.65.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
